fixed z-index crash between collection names and site-nav on index on small screens

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -188,3 +188,9 @@ ul, ol {
 	opacity: 0.6;
 	padding-left: 25px;
 }
+
+.site-nav {
+	@media screen and (max-width: $on-medium) {
+		z-index: 1;
+	}
+}
